# Siebert_Crew_0.1

./: .gitignore  README.md  agent_prompt_template.py  pyproject.toml  requirements.txt
Contesto/: mega-prompt.md
RAG/: read_brand_info.py
RAG/Rag 1/: brand_info.csv
RAG/Rag 2/: best_practices.csv  best_practices.csv - Foglio1.csv
RAG/Rag 3/: compliance_info.csv - Foglio1.csv
src/crew_automation_content_editor_launcher/: crew.py  main.py
src/crew_automation_content_editor_launcher/config/: agents.yaml  api_keys.json  tasks.yaml
src/crew_automation_content_editor_launcher/tools/: __init__.py  content_formatter.py  csv_search_tool.py  web_search_tool.py
src/crew_automation_content_editor_launcher/utils/: __init__.py  config_manager.py  csv_manager.py  logger.py
tests/: test_web_search_tool.py
