[project]
name = "crew_automation_content_editor_launcher"
version = "0.1.0"
description = "crew_automation_content_editor_launcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
crew_automation_content_editor_launcher = "crew_automation_content_editor_launcher.main:run"
run_crew = "crew_automation_content_editor_launcher.main:run"
train = "crew_automation_content_editor_launcher.main:train"
replay = "crew_automation_content_editor_launcher.main:replay"
test = "crew_automation_content_editor_launcher.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
